msm8998-common: wifi: Disable RX wakelock feature
Change-Id: I964f475a61318be53eb33c1a0127f90ec70cd386

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -524,6 +524,9 @@ gper_roam_enabled=0
 # @Default: 0
 etsi_srd_chan_in_master_mode=1
 
+# Disable RX wakelock
+rx_wakelock_timeout=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
