--- a/sensors/android.hardware.sensors@1.0-service.nubia_msm8998.rc
+++ b/sensors/android.hardware.sensors@1.0-service.nubia_msm8998.rc
@@ -1,4 +1,4 @@
-service vendor.sensors-hal-1-0 /vendor/bin/hw/android.hardware.sensors@1.0-service
+service vendor.sensors-hal-1-0 /vendor/bin/hw/android.hardware.sensors@1.0-service.nubia_msm8998
     interface android.hardware.sensors@1.0::ISensors default
     class hal
     user system
